python_tutorial_5.txt
>>> tel = {'jack': 4098, 'sape': 4139}
>>> tel['guido'] = 4127
>>> tel
{'sape': 4139, 'jack': 4098, 'guido': 4127}
>>> tel['jack']
4098
>>> del tel['sape']
>>> tel['irv'] = 4127
>>> tel
{'jack': 4098, 'irv': 4127, 'guido': 4127}
>>> tel.keys()
['jack', 'irv', 'guido']
>>> 'guido' in tel
True
>>> dict([('sape', 4139), ('guido', 4127), ('jack', 4098)])
{'sape': 4139, 'jack': 4098, 'guido': 4127}
>>> {x: x**2 for x in (2, 4, 6)}
{2: 4, 4: 16, 6: 36}
>>> dict(sape=4139, guido=4127, jack=4098)
{'sape': 4139, 'jack': 4098, 'guido': 4127}
>>> for i, v in enumerate(['tic', 'tac', 'toe']}:
  File "<stdin>", line 1
    for i, v in enumerate(['tic', 'tac', 'toe']}:
                                               ^
SyntaxError: invalid syntax
>>> for i, v in enumerate(['tic', 'tac', 'toe']):
...     print i, v
... 
0 tic
1 tac
2 toe
>>> question = ['name', 'quest', 'favourite color']
>>> answer = ['lancelot', 'the holy grail', 'blue']
>>> for q, a in zip(questions, answers):
...     print 'What is your {0}? It is {1}.'.format(q, a)
... 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'questions' is not defined
>>> questions = ['name', 'quest', 'favourite color']
>>> answers = ['lancelot', 'the holy grail', 'blue']
>>> for q, a in zip(questions, answers):
...     print 'What is your {0}? It is {1}.'.format(q, a)
... 
What is your name? It is lancelot.
What is your quest? It is the holy grail.
What is your favourite color? It is blue.
>>> for i in reverse(xrange(1, 10, 2):
  File "<stdin>", line 1
    for i in reverse(xrange(1, 10, 2):
                                     ^
SyntaxError: invalid syntax
>>> for i in reversed(xrange(1, 10, 2):
  File "<stdin>", line 1
    for i in reversed(xrange(1, 10, 2):
                                      ^
SyntaxError: invalid syntax
>>> for i in reversed(xrange(1, 10, 2)):
...     print i
... 
9
7
5
3
1
>>> xrange(1,10, 2)
xrange(1, 11, 2)
>>> xrange
<type 'xrange'>
>>> reversed(xrange(1,10,2)
... 
... 
... 
... 
... print 
  File "<stdin>", line 6
    print 
        ^
SyntaxError: invalid syntax
>>> for i in reversed(xrange(1, 10)):
...     print i
... 
9
8
7
6
5
4
3
2
1
>>> basket = ['apple', 'orange', 'apple', 'pear', 'orange', 'banana']
>>> for i in sorted(set(basket)):
...     print f
... 
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
NameError: name 'f' is not defined
>>> for f in sorted(set(basket)):
...     print f
... 
apple
banana
orange
pear
>>> import math
>>> raw_data = [56.2, float('Nan'), 51.7, 55.3, 52.5, float('NaN'), 47.8]
>>> filtered data = []
  File "<stdin>", line 1
    filtered data = []
                ^
SyntaxError: invalid syntax
>>> filtered_data = []
>>> for value in raw_data:
...     if not math.isnan(value):
...             filtered_data.append(value)
... 
>>> filtered_data
[56.2, 51.7, 55.3, 52.5, 47.8]
>>> float('NaN')
nan
>>> math.isnan(nan)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'nan' is not defined
>>> math.isnan('nan')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: a float is required
>>> math.isnan(float'nan')
  File "<stdin>", line 1
    math.isnan(float'nan')
                        ^
SyntaxError: invalid syntax
>>> math.isnan(float('nan'))
True
>>> math.isnan(float('na'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: could not convert string to float: na
>>> math.isna(float('na'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'module' object has no attribute 'isna'
>>> math.isnan(float('nan'))
True
>>> string1, string2, string3 = '', 'Trondheim', 'Hammer Dance'
>>> non_null = string1 or string2 or string3
>>> non_null
'Trondheim'
>>> quit()

